# air-pollution

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  pyproject.toml
.dvc/: config
air_pollution/: __init__.py  dataset.py  features.py  plots.py
air_pollution/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
