[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "air_pollution"
version = "0.0.1"
description = "Air pollution prediction system for Utrecht, The Netherlands. Created as part of the AI Engineering course at the RUG."
authors = [
  { name = "AIEng Team" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "loguru",
    "mkdocs",
    "pip",
    "python-dotenv",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 120
src = ["air_pollution"]
include = ["pyproject.toml", "air_pollution/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["air_pollution"]
force-sort-within-sections = true

